2011/04/17
~~~~~~~~~~

* R >= 2.13 required
* refactor all Sweave drivers to fix a bug with keep.source = TRUE

2011/03/04
~~~~~~~~~~

* fix another bug with mac: now open files with command 'open'
* method for stat.table objects (package Epi)

2011/03/04
~~~~~~~~~~

* fix another bug with mac: now open files with command 'open'
* method for stat.table objects (package Epi)

2011/03/02
~~~~~~~~~~

* fix a bug with mac (was recognized as windows)
* exportation options can be set directly in Report$export(<options>)
* add a new special object/function for reporting : verbatim(), to create a verbatim environment
* add the ability to save a recordedplot, a lattice plot or a ggplot. graph() function is renamed fig() for the occasion
* add helpers inside the class Report: Report$addSection(), Report$addParagraph(), Report$addVerbatim(), Report$addFig()

2011/02/26
~~~~~~~~~~

* export and Report functions: use asciidoc, a2x, txt2tags, pandoc or markdown2pdf to export R objects to files
* pandoc support (thanks to Matti Pastell)
* add ability to change opening and closing text of chunk (Sweave option +begin+ and +end+)
* l/r/t/bgroup with org and t2t
* align support with t2t

2010/07/08
~~~~~~~~~~

* add +weaver+ and +cacheSweave+ based drivers for all markups.

2010/06/02
~~~~~~~~~~

* Fix bug with one row table and factors

2010/05/19
~~~~~~~~~~

* Fix digits

2010/05/14
~~~~~~~~~~

* Fix bug in org export: +\vert+ replace +\|+

2010/04/20
~~~~~~~~~~

* main functions rewritten: it should be easier to add new markup
* add dimnames in +ascii.table()+
* +style+, +align+ and +valign+ accept matrix
* +t/b/l/rgroup+ accept several groups (in a list)
* +header+ and +footer+ accept an integer (number of lines for the header)
* +t/b/l/rstyle+ can be "h" (for "header")
* +caption+, +caption.level+, +align+, +valign+, +style+, +frame+, +grid+ have +NULL+ default value
* +'nice'+ format: 0 digits if integer

2010/02/05
~~~~~~~~~~

* textile support