@@ -1,3 +1,8 @@
+2011/04/29
+~~~~~~~~~~
+
+* +ext+ option is replaced by +format+
+
 2011/04/17
 ~~~~~~~~~~
 
